<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>jrecorder</groupId>
  <artifactId>jrecorder</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>jrecorder</name>
  <description>Java interface vased GUI for the RF Recorder</description>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <release>9</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.jfree</groupId>
  		<artifactId>jfreechart</artifactId>
  		<version>1.0.19</version>
  	</dependency>
  	<!-- https://mvnrepository.com/artifact/org.apache.logging./ -->
	<dependency>
	    <groupId>log4j</groupId>
	    <artifactId>log4j</artifactId>
	    <version>1.2.16</version>
	</dependency>
	<dependency>
  		<groupId>com.google.protobuf</groupId>
  		<artifactId>protobuf-java</artifactId>
  		<version>3.5.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.java-websocket</groupId>
  		<artifactId>Java-WebSocket</artifactId>
  		<version>1.3.7</version>
  	</dependency>
  </dependencies>
</project>